grammar.bnf
# NewJack grammar
<code> ::= {<class>} [<commant>]
<class> ::= "class" <identifier'class_name'> "{" {<class_content>} "}" [<commant>]
<class_content> ::= <var_S> | <subroutine> [<commant>]
<subroutine> ::= ("constructor" | "function" | "method") (<type> | "void") <identifier'name'> "(" (<argument_list> | "pass") ")" "{" <statements> "}" [<commant>]
<type> ::= <identifier'type'> | <built-in_type> [<commant>]
<argument_list> ::= <type> <identifier'arg_name'> [{"," <type> <identifier'arg_name'>}] [<commant>]
<statements> ::= ({<statement>} | "pass") [<commant>]
<statement> ::= <var_S> | <let_S> | <do_S> | <if_S> | <while_S> | <for_S> | <return_S> [<commant>]
<var_S> ::= ("var" | "attr") <type> <identifier'name'> [{"," <identifier'name'>}] ["=" <expression>] ";" [<commant>]
<let_S> ::= "let" <var> "=" <expression> ";" [<commant>]
<do_S> ::= "do" <call> ";" [<commant>]
<if_S> ::= "if" "(" <conditional> ")" "{" <statements> "}" [{"else if" "(" <conditional> ")" "{" <statements> "}"}] ["else" "{" <statements> "}"] [<commant>]
<while_S> ::= "while" "(" <conditional> ")" "{" (<statements> | <break_S> | <continue_S>) "}" [<commant>]
<for_S> ::= "for" "(" <integer> [";" <integer> ";" <integer>] ")" "{" (<statements> | <break_S> | <continue_S>) "}" ["else" "{" <statements> "}"] [<commant>]
<return_S> ::= "return" (<expression> | "void") ";" [<commant>]
<break_S> ::= "break" ";" [<commant>]
<continue_S> ::= "continue" ";" [<commant>]
<var> ::= <identifier'var'> | <var> "." <identifier'attr'> | <var> "[" <integer> "]" [<commant>]
<expression> ::= <term> [{<operator> <term>}] [<commant>]
<term> ::= <string> | <integer> | <float> | <keyword_content> | <unoperator> <term> | <call> | <var> | "(" <expression> ")" | <conditional> [<commant>]
<call> ::= <var> "(" (<expression> [{"," <expression>}] | "pass") ")" [<commant>]
<conditional> ::= <expression> <logical_operator> <expression> [<commant>]

# terminal symbol:
<identifier> ::= (<a-z> | <A-Z> | "_") {(<a-z> | <A-Z> | "_" | <0-9>)}
<a-z> ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k"
        | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z"
<A-Z> ::= "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K"
        | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"
<0-9> ::= "0" | <1-9>
<1-9> ::= "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
<built-in_type> ::= "int" | "bool" | "char" | "str" | "list" | "float"
<keyword> ::= "class" | "var" | "attr" | "constructor" | "function" | "method" | "void" | "pass" | <keyword_content>
            | "let" | "do" | "if" | "if else" | "else" | "while" | "return" | "for" | "break" | "continue"
<keyword_content> ::= "false" | "true" | "none" | "self"
<symbol> ::= "{" | "}" | "[" | "]" | "(" | ")" | "=" | ";" | "," | "." | <operator> | "~"
<operator> ::= "+" | "-" | "*" | "/" | <logical_operator> | "|" | "&"
<unoperator> ::= "-" | "~"
<logical_operator> ::= "==" | "!=" | ">=" | "<=" | ">" | "<"
<string> ::= '"' {unicode_characters} '"' # Disable line breaks
<char> ::= "'" unicode_characters "'"
<integer> ::= ["-"] <1-9> {<0-9>} | "0"
<float> ::= ["-"] {<0-9>} "." {<0-9>}
<commant> ::= "#" <string> | "`" <string> "`"
